--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-03-04 05:34:54 -0800 
+%% Created for Ryan Tibshirani at 2023-03-05 20:09:47 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{dar2021farewell,
+	author = {Yehuda Dar and Vidya Muthukumar and Richard Baraniuk},
+	date-added = {2023-03-05 13:20:30 -0800},
+	date-modified = {2023-03-05 20:09:47 -0800},
+	note = {arXiv: 2109.02355},
+	title = {A Farewell to the Bias-Variance Tradeoff? {An} Overview of the Theory of Overparameterized Machine Learning},
+	year = {2021}}
+
+@article{belkin2021fit,
+	author = {Misha Belkin},
+	date-added = {2023-03-05 13:19:10 -0800},
+	date-modified = {2023-03-05 13:20:10 -0800},
+	journal = {Acta Numerica},
+	pages = {203--248},
+	title = {Fit without fear: {Remarkable} mathematical phenomena of deep learning through the prism of interpolation},
+	year = {2021}}
+
+@article{bartlett2021deep,
+	author = {Bartlett, Peter L. and Montanari, Andrea and Rakhlin, Alexander},
+	date-added = {2023-03-05 13:15:16 -0800},
+	date-modified = {2023-03-05 13:19:04 -0800},
+	journal = {Acta Numerica},
+	pages = {87--201},
+	title = {Deep learning: {A} statistical viewpoint},
+	year = {2021}}
+
+@article{cite-key,
+	date-added = {2023-03-05 13:14:38 -0800},
+	date-modified = {2023-03-05 13:14:38 -0800}}
 
 @book{bogachev2007measure,
 	author = {Vladimir I. Bogachev},
@@ -2070,11 +2100,15 @@
 	title = {Neural tangent kernel: Convergence and generalization in neural networks},
 	year = {2018}}
 
-@unpublished{liang2018just,
+@article{liang2020just,
 	author = {Liang, Tengyuan and Rakhlin, Alexander},
-	note = {arXiv: 1808.00387},
-	title = {Just interpolate: Kernel ``ridgeless'' regression can generalize},
-	year = {2018}}
+	date-modified = {2023-03-05 20:05:17 -0800},
+	journal = {Annals of Statistics},
+	number = {3},
+	pages = {1329--1347},
+	title = {Just interpolate: {Kernel} ``ridgeless'' regression can generalize},
+	volume = {48},
+	year = {2020}}
 
 @unpublished{belkin2018understand,
 	author = {Belkin, Mikhail and Ma, Siyuan and Mandal, Soumik},
@@ -2089,11 +2123,15 @@
 	title = {Does data interpolation contradict statistical optimality?},
 	year = {2019}}
 
-@unpublished{belkin2018reconciling,
+@article{belkin2019reconciling,
 	author = {Mikhail Belkin and Daniel Hsu and Siyuan Ma and Soumik Mandal},
-	note = {arXiv: 1812.11118},
+	date-modified = {2023-03-05 13:26:01 -0800},
+	journal = {Proceeding of the National Academy of Sciences},
+	number = {32},
+	pages = {15849--15954},
 	title = {Reconciling modern machine learning and the bias-variance trade-off},
-	year = 2018}
+	volume = {116},
+	year = 2019}
 
 @unpublished{belkin2019two,
 	author = {Mikhail Belkin and Daniel Hsu and Ji Xu},
@@ -5569,8 +5607,9 @@
 	title = {Splitting methods for convex clustering},
 	year = 2013}
 
-@article{wavespline,
+@article{unser1997ten,
 	author = {Michael Unser},
+	date-modified = {2023-03-05 13:26:30 -0800},
 	journal = {Wavelet Applications in Signal and Image Processing V},
 	pages = {422--431},
 	title = {Ten Good Reasons For Using Spline Wavelets},
